# transpilers

./: .cbmignore  .env  .envrc  .gitattributes  .gitignore  BRANCH_MERGE_REPORT.md  LICENSE  README.md  RUN.md  helpers.mod  justfile  m.mod  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: compute_ep_expected.py  cpp-transpilation-benchmarks.md  validate_tests.py
benchmarks/metrics/: __init__.py
benchmarks/scripts/: run_transpilers.py
benchmarks/tasks/: 001_bitwise_ops.json  002_fast_power.json  005_run_length_encode.json  006_fizzbuzz.json  007_collatz_length.json  009_fibonacci_memo.json  012_max_subarray.json  013_merge_sort.json  016_min_stack.json  017_bst_insert_search.json  018_bfs_shortest_path.json  020_vector2d.json  027_activity_selection.json  029_union_find.json  032_ep_safe_divide.json  033_ep_clamp.json  036_ep_to_upper.json  038_ep_moist_enthalpy.json
benchmarks/transpilation-bench/: .gitignore  LICENSE  README.md  generate_tasks.py  run_eval.py
data/: README.md  clean_corpus.py  cpp_failure_taxonomy_after.md  cpp_failure_taxonomy_baseline.md  cpp_mojo_pairs.jsonl  cpp_mojo_pairs_bundled.jsonl  cpp_mojo_sft.json  dedup_corpus.py  ecosystem_map.py  gather_signals.py  license_split.py  mojo_corpus_README.md  mojo_corpus_clean_manifest.json  mojo_corpus_license_split.json  mojo_corpus_manifest.json  mojo_ecosystem_coverage.json  mojo_ecosystem_coverage.md
data/night/: REPORT.md  batch_00.jsonl  batch_01.jsonl  batch_02.jsonl  batch_03.jsonl  batch_04.jsonl  ep_pairs_v3_manifest.jsonl  ep_pairs_v3_std_manifest.jsonl  fails_full.jsonl  llm_candidates.jsonl  llm_candidates_r5.jsonl  llm_skipped.jsonl  llm_verified.jsonl  llm_verified2.jsonl  llm_verified3.jsonl  llm_verified4.jsonl  llm_verified5.jsonl  opbatch_00.jsonl  opbatch_01.jsonl  opout_00.jsonl  opout_01.jsonl  opverified.jsonl  opverified_r2.jsonl  opverified_r3.jsonl  out_00.jsonl  out_01.jsonl  out_02.jsonl  out_03.jsonl  out_04.jsonl  outparam_candidates.jsonl  pairs_full.jsonl
data/rag/: index.tv  index_info.json  meta.json
data/sft/: cpp_python_pairs.jsonl  docs_instruction.jsonl  mix_manifest.json  mojo_corpus.jsonl
deploy/: Dockerfile  runpod_handler.py
docs/: ai_tools_evaluation.md  cloud_training.md  cost_analysis.md  cpp_mojo_autoresearch.md  data_flywheel.md  diffusion_gemma.md  energyplus_migration_readiness.md  fine_tuning_guide.md  finetune_qwen7b.md  ir_pair_pipeline.md  issue_50_ground_truth.md  llm_comparison.md  llvm_ir_pipeline.md  monetization_strategy.md  multi_llm_pipeline.md  north_star_strategy.md  occt_gp_preamble.hpp  occt_preamble.hpp  procedural_tools.md  related_projects.md  runpod_guide.md  syntax_matrix.yaml  topologic_migration.md  transpilation-methods-research.md
examples/: add.py  example.c  example.cpp  example.cs  example.f90  example.go.txt  example.java  example.js  example.ts  example.vb  inferred.py  interproc.py  strings.py
examples/algorithms/: README.md  ackermann.py  binary_search.py  bubble_sort.py  collatz.py  digit_sum.py  fast_pow.py  fibonacci.py  fizzbuzz.py  gcd.py  is_prime.py  lcm.py  linear_search.py  mandelbrot.py  newton_sqrt.py  palindrome_int.py  sieve.py  sum_list.py  triangle_num.py
examples/behavioral/: numeric.py
reports/: energyplus-mojo-transpilers-progress-report.pptx
scripts/: analyze_graph.py  batch_repair.py  behavioral_sweep.py  build_cpp_mojo_dataset.py  build_ir_pairs.py  cpp_ground_truth.py  cpp_mojo_to_sft.py  crawl_github.py  emit_llvm_ir.py  ep_compile_sweep.py  ep_coverage.py  ep_emit_lifts.py  ep_lift_sweep.py  ep_preamble.h  ep_todo_cats.py  escalating_repair_bench.py  failure_taxonomy.py  gen_stdlib_maps.py  lift_to_python.py  night_assemble.py  night_count_candidates.py  night_count_outparam.py  night_debug_all.sh  night_debug_verify.py  night_extract_outparam.py  night_find_callees.py  night_list_r5.py  night_list_recs.py  night_make_bundle_test.py  night_make_round2.py  night_migrate_std.py  night_mk_round3.py  night_mk_round5.py  night_overlap.py  night_prep_llm.py  night_qa.py  night_rescue2.py  night_rescue4.py  night_rescue_op.py  night_sample_pairs.py  (+11 more)
stateless transpilation/: 0_inference.md  1_build_manifest.py  1_manifest.json  2_batch_report.json  2_transpile.md  2_transpile.py  3_benchmark.py  3_verify.py  4_review.md  4_review.py  5_glue.md  _mojo_compile.sh  _reconcile_status.py  build_config.py  deploy_diffusiongemma_vertex.py  ep_config.json  ep_full_config.json  run_local_server.sh  transpile.py
tests/: test_algorithm_pairs.py  test_api.py  test_behavioral.py  test_c_target.py  test_c_to_targets.py  test_cbm_graph.py  test_cbm_preamble.py  test_cpp_ground_truth.py  test_cpp_include_resolution.py  test_cpp_to_targets.py  test_cpp_via_python.py  test_dedupe_overloads.py  test_diffusion_gemma.py  test_escalating_repair.py  test_extra_languages.py  test_failure_taxonomy.py  test_flywheel_metrics.py  test_flywheel_run.py  test_frontend_constructs.py  test_god_object_slice.py  test_infer_contracts.py  test_levels.py  test_lift.py  test_llm_client_backend.py  test_llm_rename.py  test_migration_plan.py  test_never_refuse.py  test_new_frontends.py  test_promote_repair.py  test_provenance.py  test_psychro_shims.py  test_python_to_mojo.py  test_python_to_rust.py  test_python_to_zig.py  test_record_replay.py  test_repair_outcomes.py  test_smt.py  test_strings.py  test_structural_fidelity.py  test_trace_types.py  (+2 more)
tools/cloud/: run.sh  (+7 more)
tools/migraph/: .migraph.gitignore  MIGRAPH_README.md  _build_worklist.py  migration_graph.html  migration_tree.html  pyproject.toml  swarm_worklist.json  swarm_worklist.md
tools/migraph/migraph/: __main__.py  classify_kernels.py  code_graph.py  cpp_graph.py  migration_graph.py  module_graph.py
transpilation-flash/: README.md  client.py  pyproject.toml  worker.py
transpilers-flash/: README.md  probe_worker.py  pyproject.toml
(+1648 files in other folders)
