[project]
name = "transpilers"
version = "0.0.1"
description = "Hybrid algorithmic + LLM source-to-source transpiler. N-to-M across Fortran/C/C++/VB/Python and Rust/Zig/C/Mojo."
requires-python = ">=3.11"
dependencies = [
    "libcst>=1.5",
    "anthropic>=0.40",
    "tree-sitter>=0.23",
    "pycparser>=2.22",
    "clang>=21.1.7",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-fortran>=0.6.0",
    "tree-sitter-go>=0.25.0",
    "pyghidra>=3.1.0",
    "libclang>=18.1.1",
]

[project.scripts]
transpile = "transpilers.cli.main:main"
transpile-levels = "transpilers.levels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transpilers"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]
