[project]
name = "transpilers"
version = "0.0.1"
description = "Hybrid algorithmic + LLM source-to-source transpiler. N-to-M across Fortran/C/C++/VB/Python and Rust/Zig/C/Mojo."
requires-python = ">=3.11"
dependencies = [
    "libcst>=1.5",
    "anthropic>=0.40",
    "tree-sitter>=0.23",
    "pycparser>=2.22",
    "clang>=21.1.7",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-fortran>=0.6.0",
    "tree-sitter-go>=0.25.0",
    "pyghidra>=3.1.0",
    "libclang>=18.1.1",
    "openrouter>=0.9.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
transpile = "transpilers.cli.main:main"
transpile-levels = "transpilers.levels:main"
transpile-api = "transpilers.api.server:main"
transpile-llm = "transpilers.cli.transpile:main"
transpile-build-config = "transpilers.cli.build_config:main"
transpile-comments = "transpilers.cli.strip_comments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transpilers"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "httpx>=0.27",  # for TestClient in API tests
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]
runpod = [
    "runpod>=1.7",
]
# Install PyTorch separately with the ROCm build matching your GPU/driver — NOT pinned here
# because the wheel index is hardware-specific. For AMD RX 7700 XT (RDNA3, gfx1101), ROCm >= 6.2:
#   uv pip install --index-url https://download.pytorch.org/whl/rocm6.3 torch
# (built/run with torch==2.9.1+rocm6.3)
ml = [
    "transformers==5.10.2",
    "peft==0.19.1",
    "trl==1.5.1",
    "datasets==5.0.0",
    "accelerate==1.13.0",
    "safetensors==0.7.0",
    "tokenizers",
    "huggingface-hub",
    "numpy==2.4.6",
    "sentence-transformers==5.5.1",  # codebase RAG index (scripts/rag/)
]
