[project]
name = "transpilers"
version = "0.0.1"
description = "Hybrid algorithmic + LLM source-to-source transpiler. N-to-M across Fortran/C/C++/VB/Python and Rust/Zig/C/Mojo."
requires-python = ">=3.14"
dependencies = [
    "libcst>=1.8.6",
    "anthropic>=0.111.0",
    "tree-sitter>=0.25.2",
    "pycparser>=3.0",
    "clang>=21.1.7",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-fortran>=0.6.0",
    "tree-sitter-go>=0.25.0",
    "pyghidra>=3.1.0",
    "libclang>=18.1.1",
    "openrouter>=0.10.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
transpile = "transpilers.cli.main:main"
transpile-levels = "transpilers.levels:main"
transpile-api = "transpilers.api.server:main"
transpile-llm = "transpilers.cli.transpile:main"
transpile-build-config = "transpilers.cli.build_config:main"
transpile-comments = "transpilers.cli.strip_comments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transpilers"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "httpx>=0.28.1",  # for TestClient in API tests
]
api = [
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
]
runpod = [
    "runpod>=1.9.1",
]
# Install PyTorch separately with the ROCm build matching your GPU/driver — NOT pinned here
# because the wheel index is hardware-specific. For AMD RX 7700 XT (RDNA3, gfx1101), ROCm >= 6.2:
#   uv pip install --index-url https://download.pytorch.org/whl/rocm6.3 torch
# (built/run with torch==2.9.1+rocm6.3)
ml = [
    "transformers==5.12.1",
    "peft==0.19.1",
    "trl==1.6.0",
    "datasets==5.0.0",
    "accelerate==1.14.0",
    "safetensors==0.8.0",
    "tokenizers",
    "huggingface-hub",
    "numpy==2.4.6",
    "sentence-transformers==5.6.0",  # codebase RAG index (scripts/rag/)
]
