[project]
name = "transpilation-flash"
version = "0.1.0"
description = "RunPod Flash worker for C++ → Python/Mojo transpilation via DeepSeek-V4-Flash"
requires-python = ">=3.12"
dependencies = [
    "runpod-flash>=1.7.0",
    "openai>=1.0",
]

[project.scripts]
transpile-flash = "client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
